@@ -26,11 +26,14 @@ import javax.xml.bind.annotation.XmlRootElement;
 import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 
 import com.stefanbrenner.droplet.model.IAction;
+import com.stefanbrenner.droplet.model.ICamera;
+import com.stefanbrenner.droplet.model.IDevice;
 import com.stefanbrenner.droplet.model.IFlash;
+import com.stefanbrenner.droplet.model.IValve;
 import com.stefanbrenner.droplet.xml.ColorAdapter;
 
 @XmlRootElement(name = "Flash")
-public class Flash extends AbstractActionDevice<IAction> implements IFlash {
+public class Flash extends AbstractActionDevice implements IFlash {
 
 	private static final long serialVersionUID = 1L;
 
@@ -49,13 +52,27 @@ public class Flash extends AbstractActionDevice<IAction> implements IFlash {
 	}
 
 	@Override
+	protected String getDeviceType() {
+		return "Flash";
+	}
+
+	@Override
 	public IAction createNewAction() {
 		return new Action();
 	}
 
 	@Override
-	protected String getDeviceType() {
-		return "Flash";
+	public int compareTo(IDevice o) {
+		if (o instanceof IValve) {
+			return 1;
+		}
+		if (o instanceof ICamera) {
+			return -1;
+		}
+		if (o instanceof IFlash) {
+			return 0;
+		}
+		return -o.compareTo(this);
 	}
 
 }
